istio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl
  namespace: gytest
  labels:
    app: curl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl
  template:
    metadata:
      labels:
        app: curl
    spec:
      containers:
      - name: curl
        image: alpine/curl:latest
        command:
        - sh
        - -c
        - |
          while true; do
            curl  https://naver.com
            sleep 10
          done;
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: curl-service
  namespace: gytest
  labels:
    app: curl
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: curl
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: curl-ingress
  namespace: gytest
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - curl.aidt.classting.net
    secretName: curl-tls-secret
  rules:
  - host: curl.aidt.classting.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: curl-service
            port:
              number: 80
